@@ -694,7 +694,7 @@ abstract class Installer {
 				'enableSectionEditLinks' => false,
 				'unwrap' => true,
 			] );
-		} catch ( MediaWiki\Services\ServiceDisabledException $e ) {
+		} catch ( Wikimedia\Services\ServiceDisabledException $e ) {
 			$html = '<!--DB access attempted during parse-->  ' . htmlspecialchars( $text );
 		}
 
