@@ -1,11 +1,11 @@
 <?php
-namespace MediaWiki\Services;
+namespace Wikimedia\Services;
 
 use Exception;
 use RuntimeException;
 
 /**
- * Exception thrown when trying to access a service on a disabled container or factory.
+ * Exception thrown when trying to replace an already active service.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -28,15 +28,23 @@ use RuntimeException;
  */
 
 /**
- * Exception thrown when trying to access a service on a disabled container or factory.
+ * Exception thrown when trying to replace an already active service.
  */
-class ContainerDisabledException extends RuntimeException {
+class CannotReplaceActiveServiceException extends RuntimeException {
 
 	/**
+	 * @param string $serviceName
 	 * @param Exception|null $previous
 	 */
-	public function __construct( Exception $previous = null ) {
-		parent::__construct( 'Container disabled!', 0, $previous );
+	public function __construct( $serviceName, Exception $previous = null ) {
+		parent::__construct( "Cannot replace an active service: $serviceName", 0, $previous );
 	}
 
 }
+
+/**
+ * Retain the old class name for backwards compatibility.
+ * @deprecated since 1.33
+ */
+class_alias( CannotReplaceActiveServiceException::class,
+	'MediaWiki\Services\CannotReplaceActiveServiceException' );
