@@ -1,5 +1,5 @@
 <?php
-namespace MediaWiki\Services;
+namespace Wikimedia\Services;
 
 use Exception;
 use RuntimeException;
@@ -41,3 +41,9 @@ class ServiceDisabledException extends RuntimeException {
 	}
 
 }
+
+/**
+ * Retain the old class name for backwards compatibility.
+ * @deprecated since 1.33
+ */
+class_alias( ServiceDisabledException::class, 'MediaWiki\Services\ServiceDisabledException' );
